CHANGES IN FLTK 1.1.4

	- The Fl_Help_View widget now provides a find() method
	  to search for text within the page.
	- The Fl_Help_Dialog widget now provides a search box
	  for entering text to search for.
	- The default font encoding on OSX did not match the
	  default on WIN32 or X11.
	- Menu items were not drawn using the font specified in
	  the Fl_Menu_Item structure (STR #30)
	- Long menus that were aligned such that the top of an
	  item was exactly at the top of the screen would not
	  scroll (STR #33)
	- The OS issues appendix incorrectly stated that MacOS
	  8.6 and 9 were supported; they are not (STR #28)
	- Fixed handling of nested double-buffered windows (STR
	  #1)
	- Showing a subwindow inside a hidden window would crash
	  the application (STR #23)
	- OSX users couldn't enter some special chars when using
	  some foreign key layouts (STR #32)
	- Hiding subwindows on OSX would hide the parent window
	  (STR #22)
	- Added thin plastic box types.
	- Fl_Pack ignored the box() setting and cleared any
	  unused areas to the widget color; it now only does so
	  if the box() is set to something other than FL_NO_BOX.
	- Updated the Fl_Tabs widget to offset the first tab by
	  the box dx value to avoid visual errors.
	- Updated the plastic up box to draw only a single
	  border frame instead of the old double one for
	  improved appearance.
	- Updated the default background color on OSX to provide
	  better contrast.
	- Fl_Text_Display and friends now look for the next
	  non-punctuation/space character for word boundaries
	  (STR #26)
	- gl_font() didn't work properly for X11 when Xft was
	  used (STR #12)
	- Fl_File_Browser incorrectly included "." on WIN32 (STR
	  #9)
	- Include shellapi.h instead of ShellAPI.h in the WIN32
	  drag-n-drop code in order to work with the MingW cross
	  compiler (STR #6)
	- The cursor was not properly restored when doing
	  drag-n-drop on X11 (STR #4)
	- Fl::remove_fd() didn't recalculate the highest file